--- a/src/input.scss
+++ b/src/input.scss
@@ -692,15 +692,21 @@ body{
 
 // GetInspired
 .GetInspiredSection{
-  background-color: $bg-secondary;
+  // background-color: $bg-secondary;
   display: flex;
   flex-direction: column;
-  height: auto;
   width: 100%;
   align-items: center;
   justify-content: center;
   margin-bottom: 8rem;
   font-size: clamp(1rem, 2.5vw, 1.5rem);
+
+  h1{
+    width: 100%;
+    font-size: 2rem;
+    padding-bottom: 20px;
+    text-align: end;
+  }
 
   button{
     width: 10rem;
@@ -711,37 +717,179 @@ body{
 
   .InspiredGrid{
     width: 100%;
-    height: 50rem;
     display: grid;
-    gap: 10px;
-    grid-template: repeat(10, 1fr) / repeat(3, 1fr); 
+    // height: 60rem;
+    // grid-template: repeat(6, 1fr) / repeat(3, 1fr); 
+    // grid-template-rows: repeat(10, 1fr);
+    // grid-template-columns: repeat(3, 1fr);;
+    grid-template-columns: repeat(6, minmax(0, 1fr));
+    grid-gap: 10px;
 
     div{
-      width: auto;
-      height: auto;
       background-color: lightcoral;
-    }
+      cursor: pointer;
+      overflow: hidden;
+      grid-column: span 2;
 
-    div:first-child{
-      grid-area: 1 / 1 / span 5 / 1;
-    }
-    div:nth-child(2){
-      grid-area: 1 / 2 / span 4 / 2;
-    }
-    div:nth-child(3){
-      grid-area: 1 / 3 / span 5 / 3;
-    }
-    div:nth-child(4){
-      grid-area: 6 / 1 / span 10 / 1;
-    }
-    div:nth-child(5){
-      grid-area: 5 / 2 / 10 / 2;
-    }
-    div:nth-child(6){
-      grid-area: 6 / 3 / span 10 / 3;
+      img{
+        object-fit: cover;
+        width: 100%;
+        height: 100%;
+        transition: all 0.2s ease-in-out;
+      }
 
+      img:hover{
+        transform: scale(1.2);
+      }
+    }
+    div:not(:nth-child(2)) {
+      grid-row: span 4;
+    }
+    div:nth-child(2) {
+      grid-row: span 3;
     }
   }
+}
+
+// cartpage
+#cartpage{
+  flex: 1;
+}
+.cartGroup{
+  min-height: 50rem;
+  display: flex;
+  justify-content: space-between;
+  gap:10px;
+
+  .cartItems{
+    max-height: 50rem;
+    width: 100%;
+    overflow: auto;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+
+
+    .cartItem:nth-child(odd){
+      background-color: rgb(248, 248, 248);
+    }
+
+    .cartItem{
+      width: 100%;
+      display: flex;
+
+      div:after{
+        content: "";
+        background-color: lightgray;
+        width: 100%;
+        height: 1px;
+        bottom: 0;
+        position: absolute;
+      }
+
+      div{
+        position: relative;
+        width: 100%;
+        padding: 0px 20px 0px 20px;
+        display: flex;
+        align-items: center;
+        justify-content: space-around;
+        
+        #itemTitle{
+          // max-width: 20rem;
+          cursor: pointer;
+          height: auto;
+          text-align: start;
+          overflow-wrap: break-word;
+        }
+        span{
+          display: flex; 
+          align-items: center;
+          gap: 10px;
+
+          #cartQuantity{
+            padding: 5px 0px 5px 0;
+            border-radius: 5px;
+          }
+        }
+
+        button{
+          color: $bg-secondary;
+          position: absolute;
+          font-size: 1rem;
+          bottom: 1rem;
+          right: 1rem;
+          cursor: pointer;
+          background: none;
+          border: none;
+          transition: all 0.1s ease-in-out;
+        }
+        button:hover{
+          color: $bg-footer2;
+        }
+      }
+      img{
+        cursor: pointer;
+        width: 20rem;
+        height: 20rem;
+        object-position: bottom;
+        object-fit: cover;
+        border-top-left-radius: 10px;
+        border-bottom-left-radius: 10px;
+
+      }
+    }
+    .cartItem:not(:last-child){
+      margin-bottom: 0.5rem;
+    }
+  }
+
+  .cartSummary{
+    height: 15rem;
+    min-width: 20rem;
+    display: flex;
+    flex-direction: column;
+    gap:10px;
+    padding: 10px;
+    justify-content: space-around;
+    background-color: rgb(248, 248, 248);
+    border-radius: 5px;
+    position: relative;
+
+    span{
+      display: flex;
+      width: 100%;
+      align-items: center;
+      justify-content: space-between;
+      position: relative;
+    }
+    span:nth-child(-n+3):after{
+      content: "";
+      background-color: lightgray;
+      width: 100%;
+      height: 2px;
+      position: absolute;
+      bottom: -5px;
+    }
+
+    span:nth-child(4){
+      font-weight: bold;
+    }
+    
+    button{
+      border: none;
+      padding: 10px;
+      cursor: pointer;
+      border-radius: 5px;
+      background-color: $txt-accent;
+      color: $bg-primary;
+      font-weight: bold;
+    }
+    button:hover{
+      background-color: #1e6ce8;
+    }
+  }
+
 }
 
 // MediaQ
@@ -768,6 +916,26 @@ body{
 }
 
 @media only screen and (max-width: 900px) {
+  .cartGroup{
+    flex-direction: column-reverse;
+
+    .cartItem{
+      img{
+        width: 10rem !important;
+        height: 10rem !important;
+      }
+      div{
+        padding: 10px 10px 0px 10px !important;
+        flex-direction: column;
+        gap:20px !important;
+        justify-content: flex-start !important;
+      }
+    }
+
+    .cartSummary{
+      min-width: 10rem !important;
+    }
+  }
   #heroGrid{
     display: flex !important;
     flex-direction: column;
