--- a/src/output.css
+++ b/src/output.css
@@ -593,15 +593,19 @@ body {
 }
 
 .GetInspiredSection {
-  background-color: #D9D9D9;
   display: flex;
   flex-direction: column;
-  height: auto;
   width: 100%;
   align-items: center;
   justify-content: center;
   margin-bottom: 8rem;
   font-size: clamp(1rem, 2.5vw, 1.5rem);
+}
+.GetInspiredSection h1 {
+  width: 100%;
+  font-size: 2rem;
+  padding-bottom: 20px;
+  text-align: end;
 }
 .GetInspiredSection button {
   width: 10rem;
@@ -611,33 +615,155 @@ body {
 }
 .GetInspiredSection .InspiredGrid {
   width: 100%;
-  height: 50rem;
   display: grid;
-  gap: 10px;
-  grid-template: repeat(10, 1fr)/repeat(3, 1fr);
+  grid-template-columns: repeat(6, minmax(0, 1fr));
+  grid-gap: 10px;
 }
 .GetInspiredSection .InspiredGrid div {
-  width: auto;
-  height: auto;
   background-color: lightcoral;
+  cursor: pointer;
+  overflow: hidden;
+  grid-column: span 2;
 }
-.GetInspiredSection .InspiredGrid div:first-child {
-  grid-area: 1/1/span 5/1;
+.GetInspiredSection .InspiredGrid div img {
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+  transition: all 0.2s ease-in-out;
+}
+.GetInspiredSection .InspiredGrid div img:hover {
+  transform: scale(1.2);
+}
+.GetInspiredSection .InspiredGrid div:not(:nth-child(2)) {
+  grid-row: span 4;
 }
 .GetInspiredSection .InspiredGrid div:nth-child(2) {
-  grid-area: 1/2/span 4/2;
+  grid-row: span 3;
 }
-.GetInspiredSection .InspiredGrid div:nth-child(3) {
-  grid-area: 1/3/span 5/3;
+
+#cartpage {
+  flex: 1;
 }
-.GetInspiredSection .InspiredGrid div:nth-child(4) {
-  grid-area: 6/1/span 10/1;
+
+.cartGroup {
+  min-height: 50rem;
+  display: flex;
+  justify-content: space-between;
+  gap: 10px;
 }
-.GetInspiredSection .InspiredGrid div:nth-child(5) {
-  grid-area: 5/2/10/2;
+.cartGroup .cartItems {
+  max-height: 50rem;
+  width: 100%;
+  overflow: auto;
+  align-items: center;
+  justify-content: center;
+  position: relative;
 }
-.GetInspiredSection .InspiredGrid div:nth-child(6) {
-  grid-area: 6/3/span 10/3;
+.cartGroup .cartItems .cartItem:nth-child(odd) {
+  background-color: rgb(248, 248, 248);
+}
+.cartGroup .cartItems .cartItem {
+  width: 100%;
+  display: flex;
+}
+.cartGroup .cartItems .cartItem div:after {
+  content: "";
+  background-color: lightgray;
+  width: 100%;
+  height: 1px;
+  bottom: 0;
+  position: absolute;
+}
+.cartGroup .cartItems .cartItem div {
+  position: relative;
+  width: 100%;
+  padding: 0px 20px 0px 20px;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+.cartGroup .cartItems .cartItem div #itemTitle {
+  cursor: pointer;
+  height: auto;
+  text-align: start;
+  overflow-wrap: break-word;
+}
+.cartGroup .cartItems .cartItem div span {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+.cartGroup .cartItems .cartItem div span #cartQuantity {
+  padding: 5px 0px 5px 0;
+  border-radius: 5px;
+}
+.cartGroup .cartItems .cartItem div button {
+  color: #D9D9D9;
+  position: absolute;
+  font-size: 1rem;
+  bottom: 1rem;
+  right: 1rem;
+  cursor: pointer;
+  background: none;
+  border: none;
+  transition: all 0.1s ease-in-out;
+}
+.cartGroup .cartItems .cartItem div button:hover {
+  color: #3E3B3B;
+}
+.cartGroup .cartItems .cartItem img {
+  cursor: pointer;
+  width: 20rem;
+  height: 20rem;
+  object-position: bottom;
+  object-fit: cover;
+  border-top-left-radius: 10px;
+  border-bottom-left-radius: 10px;
+}
+.cartGroup .cartItems .cartItem:not(:last-child) {
+  margin-bottom: 0.5rem;
+}
+.cartGroup .cartSummary {
+  height: 15rem;
+  min-width: 20rem;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  padding: 10px;
+  justify-content: space-around;
+  background-color: rgb(248, 248, 248);
+  border-radius: 5px;
+  position: relative;
+}
+.cartGroup .cartSummary span {
+  display: flex;
+  width: 100%;
+  align-items: center;
+  justify-content: space-between;
+  position: relative;
+}
+.cartGroup .cartSummary span:nth-child(-n+3):after {
+  content: "";
+  background-color: lightgray;
+  width: 100%;
+  height: 2px;
+  position: absolute;
+  bottom: -5px;
+}
+.cartGroup .cartSummary span:nth-child(4) {
+  font-weight: bold;
+}
+.cartGroup .cartSummary button {
+  border: none;
+  padding: 10px;
+  cursor: pointer;
+  border-radius: 5px;
+  background-color: #3b82f6;
+  color: white;
+  font-weight: bold;
+}
+.cartGroup .cartSummary button:hover {
+  background-color: #1e6ce8;
 }
 
 @media only screen and (max-width: 1050px) {
@@ -659,6 +785,22 @@ body {
   }
 }
 @media only screen and (max-width: 900px) {
+  .cartGroup {
+    flex-direction: column-reverse;
+  }
+  .cartGroup .cartItem img {
+    width: 10rem !important;
+    height: 10rem !important;
+  }
+  .cartGroup .cartItem div {
+    padding: 10px 10px 0px 10px !important;
+    flex-direction: column;
+    gap: 20px !important;
+    justify-content: flex-start !important;
+  }
+  .cartGroup .cartSummary {
+    min-width: 10rem !important;
+  }
   #heroGrid {
     display: flex !important;
     flex-direction: column;
