--- a/src/input.scss
+++ b/src/input.scss
@@ -303,159 +303,48 @@ body{
 // Trending
 .trendingSection{
   flex: 1;
+  width: 100%;
 
   .TrendingGroup{
     padding-bottom: 8rem;
     position: relative;
+    width: 100%;
 
-    .NextButton{
-      background-color: white;
-      padding: 3px;
-      cursor: pointer;
-      box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
-    }
-
-    #left-button{
-      position: absolute;
-      top: 13rem;
-      left: -1rem;
-    }
-
-    #right-button{
-      position: absolute;
-      top: 13rem;
-      right: -1rem;
-    }
-
-    h1{
-      font-size: 2rem;
-      padding-bottom: 20px;
-    }
-
-    ul{
-      display: flex;
-      gap: 20px;
-      height: 25rem;
-      overflow: hidden;
-      scroll-behavior: smooth;
-      padding-bottom: 30px;
-
-
-      li{
-        height: auto;
-        transition: all 0.1s ease-in-out;
-        border-radius: 5px;
-        background-color: white;
-
-        .ActionButton{
-          background: white;
-          color: black;
-          border-radius: 100%;
-          display: flex;
-          align-items: center;
-          padding: 5px;
-        }
-
-        .HeartButton{
-          position: absolute;
-          top: 12px;
-          right: 10px;
-        }
-        .AddToCartButton{
-          position: absolute;
-          bottom: 12px;
-          right: 10px;
-        }
-
-        .ActionButton:hover{
-          background: $bg-secondary;
-        }
-
-        a{
-          display: flex;
-          align-items: flex-start;
-          justify-content: flex-start;
-          height: 100%;
-          width: 15rem;
-          gap:10px;
-          flex-direction: column;
-          position: relative;
-          padding: 0px 10px 0px 10px;
-
-          .TrendingTextGroup{
-            display: flex;
-            color: $txt-primary;
-            flex-direction: column;
-            gap:5px;
-            
-            span{
-              display: flex;
-              align-items: center;
-              
-              p{
-                padding: 5px;
-                margin-left:5px;
-                background-color: #fbbf24;
-              }
-            }
-
-            p:last-child{
-              font-weight: bold;
-            }
-          }
-
-          .TrendingHoverImages{
-            transition: all 0.1s ease-in-out;
-            visibility: hidden;
-            position: absolute;
-            bottom:6rem;
-            width: 15rem;
-            height: auto;
-            background-color: white;
-            display: flex;
-            align-items: center;
-
-            img{
-              width:3rem;
-              height:3rem;
-              border: 2px white solid;
-              object-fit: cover;
-              object-position: top;
-            }
-
-            img:hover{
-              border: 2px black solid
-            }
-          }
-        }
-      }
-
-      a:after{
-        content: "";
-        position: absolute;
-        bottom: -30px;
-        left: 0;
-        right: 0;
-        height: 0.5em;
-        border-top: 1px solid lightgray;
-        z-index: -1;
-      }
-
-      li:hover{
-        box-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
-        .TrendingHoverImages{
-          transform: translateY(-0.2rem);
-          visibility: visible;
-        }
-      }
-
-      img{
-        object-fit: contain;
-        height: 70%;
-        width: 100%;
-      }
-    }
   }
+  .NextButton{
+    background-color: white;
+    padding: 3px;
+    cursor: pointer;
+    box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+  }
+
+  #left-button{
+    position: absolute;
+    top: 13rem;
+    left: -1rem;
+  }
+
+  #right-button{
+    position: absolute;
+    top: 13rem;
+    right: -1rem;
+  }
+
+  h1{
+    font-size: 2rem;
+    padding-bottom: 20px;
+  }
+
+  .TrendingDisplay{
+    resize: none;
+    display: flex;
+    overflow: hidden;
+    width: 100%;
+    scroll-behavior: smooth;
+    padding-bottom: 30px;
+    gap:20px;
+  }
+    
 }
 
 // Productpage
@@ -937,6 +826,8 @@ body{
     display: flex;
     align-items: center;
     justify-content: space-between;
+    background-color: white;
+
   }
   .filterList{
     position: absolute;
@@ -947,6 +838,10 @@ body{
     flex-direction: column;
     min-width: 11rem;
     left: -1px;
+
+    .PriceRangeContainer{
+      background-color: white;
+    }
 
     button{
       background-color: $bg-primary;
@@ -962,6 +857,7 @@ body{
     li{
       background-color: white;
       padding: 10px;
+      height: 10px;
       cursor: pointer;
       display: flex;
       align-items: center;
@@ -978,6 +874,128 @@ body{
     color: white;
     padding: 4px;
     margin: 0px 5px 0px 5px;
+  }
+}
+
+// Item
+.AllItemGroup{
+  height: 100%;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 5rem;
+  flex-wrap: wrap;
+}
+
+.ProductFrame:hover{
+  box-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+  
+  .ProductImages{
+    visibility: visible;
+    transform: translateY(-0.2rem);
+  }
+}
+.ProductFrame:after{
+  content: "";
+  position: absolute;
+  bottom: -30px;
+  left: 0;
+  right: 0;
+  height: 0.5em;
+  border-top: 1px solid lightgray;
+  z-index: -1;
+}
+
+.ProductFrame{
+  cursor: pointer;
+  min-width: 15rem;
+  max-width: 15rem;
+  height: 25rem;
+  position: relative;
+  transition: all 0.1s ease-in-out;
+  padding: 10px;
+  border-radius: 5px;
+  position: relative;
+
+  .ProductImages{
+    visibility: hidden;
+    position: absolute;
+    background-color: white;
+    bottom: 6.5rem;
+    left: 0.6rem;
+    width: 15rem;
+    display: flex;
+    transition: all 0.1s ease-in-out;
+    
+    img{
+      width: 3rem;
+      height: 3rem;
+      border: 2px white solid;
+      object-fit: cover;
+      object-position: top;
+      border: 2px solid white;
+    }
+    img:hover{
+      border: 2px solid black;
+    }
+  }
+  
+  a {
+    width: 100%;
+    height: 100%;
+    color: black;
+
+    .ProductMainImg{
+      object-fit: contain;
+      width: 100%;
+      height: 70%;
+    }
+
+    div{
+      display: flex;
+      gap: 10px;
+      flex-direction: column;
+      height: 30%;
+      
+      span{
+        display: flex;
+        align-items: center;
+        p{
+          background-color: #FBBF24;
+          padding: 3px;
+          margin-left: 3px;
+        }
+      }
+
+      p:last-child{
+        font-weight: bold;
+      }
+    }
+  }
+
+  // Icons
+  .ProductIcon{
+    cursor: pointer;
+    position: absolute;
+    right: 10px;
+    font-size: 25px;
+    transition: all 0.2s ease-in-out;
+    padding: 5px;
+    text-align: center;
+    background-color: white;
+    border-radius: 100%;
+    z-index: 10;
+  }
+  .IconTop{
+    top:10px;
+  }
+  .IconBottom{
+    bottom:10px;
+  }
+  .ProductIcon:hover{
+    background-color: $bg-secondary;
   }
 }
 
