--- a/src/output.css
+++ b/src/output.css
@@ -249,137 +249,41 @@ body {
 
 .trendingSection {
   flex: 1;
+  width: 100%;
 }
 .trendingSection .TrendingGroup {
   padding-bottom: 8rem;
   position: relative;
+  width: 100%;
 }
-.trendingSection .TrendingGroup .NextButton {
+.trendingSection .NextButton {
   background-color: white;
   padding: 3px;
   cursor: pointer;
   box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -2px rgba(0, 0, 0, 0.1);
 }
-.trendingSection .TrendingGroup #left-button {
+.trendingSection #left-button {
   position: absolute;
   top: 13rem;
   left: -1rem;
 }
-.trendingSection .TrendingGroup #right-button {
+.trendingSection #right-button {
   position: absolute;
   top: 13rem;
   right: -1rem;
 }
-.trendingSection .TrendingGroup h1 {
+.trendingSection h1 {
   font-size: 2rem;
   padding-bottom: 20px;
 }
-.trendingSection .TrendingGroup ul {
+.trendingSection .TrendingDisplay {
+  resize: none;
   display: flex;
-  gap: 20px;
-  height: 25rem;
   overflow: hidden;
+  width: 100%;
   scroll-behavior: smooth;
   padding-bottom: 30px;
-}
-.trendingSection .TrendingGroup ul li {
-  height: auto;
-  transition: all 0.1s ease-in-out;
-  border-radius: 5px;
-  background-color: white;
-}
-.trendingSection .TrendingGroup ul li .ActionButton {
-  background: white;
-  color: black;
-  border-radius: 100%;
-  display: flex;
-  align-items: center;
-  padding: 5px;
-}
-.trendingSection .TrendingGroup ul li .HeartButton {
-  position: absolute;
-  top: 12px;
-  right: 10px;
-}
-.trendingSection .TrendingGroup ul li .AddToCartButton {
-  position: absolute;
-  bottom: 12px;
-  right: 10px;
-}
-.trendingSection .TrendingGroup ul li .ActionButton:hover {
-  background: #D9D9D9;
-}
-.trendingSection .TrendingGroup ul li a {
-  display: flex;
-  align-items: flex-start;
-  justify-content: flex-start;
-  height: 100%;
-  width: 15rem;
-  gap: 10px;
-  flex-direction: column;
-  position: relative;
-  padding: 0px 10px 0px 10px;
-}
-.trendingSection .TrendingGroup ul li a .TrendingTextGroup {
-  display: flex;
-  color: black;
-  flex-direction: column;
-  gap: 5px;
-}
-.trendingSection .TrendingGroup ul li a .TrendingTextGroup span {
-  display: flex;
-  align-items: center;
-}
-.trendingSection .TrendingGroup ul li a .TrendingTextGroup span p {
-  padding: 5px;
-  margin-left: 5px;
-  background-color: #fbbf24;
-}
-.trendingSection .TrendingGroup ul li a .TrendingTextGroup p:last-child {
-  font-weight: bold;
-}
-.trendingSection .TrendingGroup ul li a .TrendingHoverImages {
-  transition: all 0.1s ease-in-out;
-  visibility: hidden;
-  position: absolute;
-  bottom: 6rem;
-  width: 15rem;
-  height: auto;
-  background-color: white;
-  display: flex;
-  align-items: center;
-}
-.trendingSection .TrendingGroup ul li a .TrendingHoverImages img {
-  width: 3rem;
-  height: 3rem;
-  border: 2px white solid;
-  object-fit: cover;
-  object-position: top;
-}
-.trendingSection .TrendingGroup ul li a .TrendingHoverImages img:hover {
-  border: 2px black solid;
-}
-.trendingSection .TrendingGroup ul a:after {
-  content: "";
-  position: absolute;
-  bottom: -30px;
-  left: 0;
-  right: 0;
-  height: 0.5em;
-  border-top: 1px solid lightgray;
-  z-index: -1;
-}
-.trendingSection .TrendingGroup ul li:hover {
-  box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -4px rgba(0, 0, 0, 0.1);
-}
-.trendingSection .TrendingGroup ul li:hover .TrendingHoverImages {
-  transform: translateY(-0.2rem);
-  visibility: visible;
-}
-.trendingSection .TrendingGroup ul img {
-  object-fit: contain;
-  height: 70%;
-  width: 100%;
+  gap: 20px;
 }
 
 #productpage {
@@ -813,6 +717,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  background-color: white;
 }
 .filterButtonGroup .filterList {
   position: absolute;
@@ -823,6 +728,9 @@ body {
   flex-direction: column;
   min-width: 11rem;
   left: -1px;
+}
+.filterButtonGroup .filterList .PriceRangeContainer {
+  background-color: white;
 }
 .filterButtonGroup .filterList button {
   background-color: white;
@@ -837,6 +745,7 @@ body {
 .filterButtonGroup .filterList li {
   background-color: white;
   padding: 10px;
+  height: 10px;
   cursor: pointer;
   display: flex;
   align-items: center;
@@ -850,6 +759,118 @@ body {
   color: white;
   padding: 4px;
   margin: 0px 5px 0px 5px;
+}
+
+.AllItemGroup {
+  height: 100%;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 5rem;
+  flex-wrap: wrap;
+}
+
+.ProductFrame:hover {
+  box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -4px rgba(0, 0, 0, 0.1);
+}
+.ProductFrame:hover .ProductImages {
+  visibility: visible;
+  transform: translateY(-0.2rem);
+}
+
+.ProductFrame:after {
+  content: "";
+  position: absolute;
+  bottom: -30px;
+  left: 0;
+  right: 0;
+  height: 0.5em;
+  border-top: 1px solid lightgray;
+  z-index: -1;
+}
+
+.ProductFrame {
+  cursor: pointer;
+  min-width: 15rem;
+  max-width: 15rem;
+  height: 25rem;
+  position: relative;
+  transition: all 0.1s ease-in-out;
+  padding: 10px;
+  border-radius: 5px;
+  position: relative;
+}
+.ProductFrame .ProductImages {
+  visibility: hidden;
+  position: absolute;
+  background-color: white;
+  bottom: 6.5rem;
+  left: 0.6rem;
+  width: 15rem;
+  display: flex;
+  transition: all 0.1s ease-in-out;
+}
+.ProductFrame .ProductImages img {
+  width: 3rem;
+  height: 3rem;
+  border: 2px white solid;
+  object-fit: cover;
+  object-position: top;
+  border: 2px solid white;
+}
+.ProductFrame .ProductImages img:hover {
+  border: 2px solid black;
+}
+.ProductFrame a {
+  width: 100%;
+  height: 100%;
+  color: black;
+}
+.ProductFrame a .ProductMainImg {
+  object-fit: contain;
+  width: 100%;
+  height: 70%;
+}
+.ProductFrame a div {
+  display: flex;
+  gap: 10px;
+  flex-direction: column;
+  height: 30%;
+}
+.ProductFrame a div span {
+  display: flex;
+  align-items: center;
+}
+.ProductFrame a div span p {
+  background-color: #FBBF24;
+  padding: 3px;
+  margin-left: 3px;
+}
+.ProductFrame a div p:last-child {
+  font-weight: bold;
+}
+.ProductFrame .ProductIcon {
+  cursor: pointer;
+  position: absolute;
+  right: 10px;
+  font-size: 25px;
+  transition: all 0.2s ease-in-out;
+  padding: 5px;
+  text-align: center;
+  background-color: white;
+  border-radius: 100%;
+  z-index: 10;
+}
+.ProductFrame .IconTop {
+  top: 10px;
+}
+.ProductFrame .IconBottom {
+  bottom: 10px;
+}
+.ProductFrame .ProductIcon:hover {
+  background-color: #D9D9D9;
 }
 
 @media only screen and (max-width: 1050px) {
