--- a/src/input.scss
+++ b/src/input.scss
@@ -784,21 +784,29 @@ body{
 #allProductsPage{
   flex: 1;
   user-select: none;
+
+  h1{
+    text-align: center;
+    margin-bottom: 2rem;
+    font-size: 2rem;
+  }
 }
+
 .filterPanelGroup{
   display: flex;
   align-items: center;
   justify-content: center;
   gap:20px;
-  width: fit-content;
+  width: 100%;
   margin: auto;
 }
+
 .filterButtonGroup{
   display: flex;
   align-items: center;
   justify-content: space-between;
   cursor: pointer;
-  width: fit-content;
+  width: 5rem;
   padding: 5px 10px 5px 10px;
   border: 1px solid black;
   position: relative;
@@ -813,7 +821,7 @@ body{
     background-color: white;
     position: absolute;
     top: -5px;
-    width: 99px;
+    width: 100px;
     height: 5px;
   }
   .typeBefore:before{
@@ -821,7 +829,7 @@ body{
     background-color: white;
     position: absolute;
     top: -5px;
-    width: 97px;
+    width: 100px;
     height: 5px;
   }
   .PriceRangeGroup{
@@ -829,8 +837,8 @@ body{
     align-items: center;
     justify-content: space-between;
     background-color: white;
-
   }
+  
   .filterList{
     position: absolute;
     z-index: 2;
@@ -840,6 +848,8 @@ body{
     flex-direction: column;
     min-width: 11rem;
     left: -1px;
+    height: auto;
+    background-color: white;
 
     .PriceRangeContainer{
       background-color: white;
@@ -857,7 +867,7 @@ body{
     }
 
     li{
-      background-color: white;
+      // background-color: white;
       padding: 10px;
       height: 10px;
       cursor: pointer;
@@ -931,7 +941,7 @@ body{
     background-color: white;
     bottom: 7rem;
     left: 0.6rem;
-    width: 15rem;
+    width: 100%;
     display: flex;
     transition: all 0.1s ease-in-out;
     
@@ -1006,8 +1016,27 @@ body{
   }
 }
 
+// FavouritePage
+#favouritePage{
+  flex: 1;
+  user-select: none;
+  h1{
+    text-align: center;
+    margin-bottom: 2rem;
+    font-size: 2rem;
+  }
+}
+
 // MediaQ
+@media only screen and (max-width: 1500px) {
+  .AllItemGroup{
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
 @media only screen and (max-width: 1050px) {
+  .AllItemGroup{
+    grid-template-columns: repeat(2, 1fr);
+  }
   .ProductGroup{
     gap: 1rem !important;
 
@@ -1131,7 +1160,16 @@ body{
   }
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 630px) {
+
+  .AllItemGroup{
+    gap: 2rem !important;
+  }
+  .ProductFrame{
+    min-width: 10rem;
+    max-width: 10rem;
+    height: 20rem;
+  }
   .ContactContainer{
     justify-content: center;
     align-items: flex-start;
@@ -1158,5 +1196,40 @@ body{
     display: flex !important;
   }
 }
+@media only screen and (max-width: 430px) {
+  .filterPanelGroup{
+    flex-direction: column;
+    align-items: flex-start;
+  }
+  .filterButtonGroup{
+    width: 4rem;
+    .priceBefore:before{
+      content: "";
+      background-color: white;
+      position: absolute;
+      top: -5px;
+      width: 84px;
+      height: 5px;
+    }
+    .typeBefore:before{
+      content: "";
+      background-color: white;
+      position: absolute;
+      top: -5px;
+      width: 84px;
+      height: 5px;
+    }
+    .filterList{
+      top: 34px;
+    }
+  }
+  .ProductFrame{
+    min-width: 100%;
+    max-width: 100%;
+  }
 
+  .AllItemGroup{
+    grid-template-columns: repeat(1, 1fr);
+  }
+}
 
