--- a/src/output.css
+++ b/src/output.css
@@ -674,13 +674,18 @@ body {
   flex: 1;
   user-select: none;
 }
+#allProductsPage h1 {
+  text-align: center;
+  margin-bottom: 2rem;
+  font-size: 2rem;
+}
 
 .filterPanelGroup {
   display: flex;
   align-items: center;
   justify-content: center;
   gap: 20px;
-  width: fit-content;
+  width: 100%;
   margin: auto;
 }
 
@@ -689,7 +694,7 @@ body {
   align-items: center;
   justify-content: space-between;
   cursor: pointer;
-  width: fit-content;
+  width: 5rem;
   padding: 5px 10px 5px 10px;
   border: 1px solid black;
   position: relative;
@@ -704,7 +709,7 @@ body {
   background-color: white;
   position: absolute;
   top: -5px;
-  width: 99px;
+  width: 100px;
   height: 5px;
 }
 .filterButtonGroup .typeBefore:before {
@@ -712,7 +717,7 @@ body {
   background-color: white;
   position: absolute;
   top: -5px;
-  width: 97px;
+  width: 100px;
   height: 5px;
 }
 .filterButtonGroup .PriceRangeGroup {
@@ -730,6 +735,8 @@ body {
   flex-direction: column;
   min-width: 11rem;
   left: -1px;
+  height: auto;
+  background-color: white;
 }
 .filterButtonGroup .filterList .PriceRangeContainer {
   background-color: white;
@@ -745,7 +752,6 @@ body {
   background-color: #D9D9D9;
 }
 .filterButtonGroup .filterList li {
-  background-color: white;
   padding: 10px;
   height: 10px;
   cursor: pointer;
@@ -813,7 +819,7 @@ body {
   background-color: white;
   bottom: 7rem;
   left: 0.6rem;
-  width: 15rem;
+  width: 100%;
   display: flex;
   transition: all 0.1s ease-in-out;
 }
@@ -879,7 +885,25 @@ body {
   background-color: #D9D9D9;
 }
 
+#favouritePage {
+  flex: 1;
+  user-select: none;
+}
+#favouritePage h1 {
+  text-align: center;
+  margin-bottom: 2rem;
+  font-size: 2rem;
+}
+
+@media only screen and (max-width: 1500px) {
+  .AllItemGroup {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
 @media only screen and (max-width: 1050px) {
+  .AllItemGroup {
+    grid-template-columns: repeat(2, 1fr);
+  }
   .ProductGroup {
     gap: 1rem !important;
   }
@@ -985,7 +1009,15 @@ body {
     height: 50%;
   }
 }
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 630px) {
+  .AllItemGroup {
+    gap: 2rem !important;
+  }
+  .ProductFrame {
+    min-width: 10rem;
+    max-width: 10rem;
+    height: 20rem;
+  }
   .ContactContainer {
     justify-content: center;
     align-items: flex-start;
@@ -1006,6 +1038,41 @@ body {
   }
   .burgerButton {
     display: flex !important;
+  }
+}
+@media only screen and (max-width: 430px) {
+  .filterPanelGroup {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+  .filterButtonGroup {
+    width: 4rem;
+  }
+  .filterButtonGroup .priceBefore:before {
+    content: "";
+    background-color: white;
+    position: absolute;
+    top: -5px;
+    width: 84px;
+    height: 5px;
+  }
+  .filterButtonGroup .typeBefore:before {
+    content: "";
+    background-color: white;
+    position: absolute;
+    top: -5px;
+    width: 84px;
+    height: 5px;
+  }
+  .filterButtonGroup .filterList {
+    top: 34px;
+  }
+  .ProductFrame {
+    min-width: 100%;
+    max-width: 100%;
+  }
+  .AllItemGroup {
+    grid-template-columns: repeat(1, 1fr);
   }
 }
 
